# ml-rnn-names

./: README.md  plan.md  pyproject.toml
notebooks/: comparison.ipynb  gen_rnn.ipynb  lstm.ipynb  main.ipynb  rnn.ipynb  sandbox.ipynb
src/ml_rnn_names/: NamesDataset.py  __init__.py  data.py  evaluation.py  model.py  processing.py  training.py  utils.py
tests/: test_data.py  test_processing.py
