[project]
name = "ml_rnn_names"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "William Woodhead", email = "6097010+nofable@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
]

[project.scripts]
ml_rnn_names = "ml_rnn_names:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]
